<resources>
    <string name="app_name">Carteira Virtual</string>
    <string name="hint_login_user_phone_number">Digite seu número de telefone</string>
    <string name="hint_login_user_password">Digite sua senha</string>
    <string name="hint_user_name">Digite seu nome</string>
    <string name="hint_user_email">Digite seu email</string>
    <string name="hint_user_password">Digite sua Senha</string>
    <string name="hint_user_password_confirmation">Confirme sua senha</string>
    <string name="text_user_register">Não tem Conta? Cadastre-se</string>
    <string name="text_user_recovery_password">Esqueci a Senha</string>
    <string name="text_info_type_phone_number">Digite o número do seu celular</string>
    <string name="text_info_type_code">Digite o código enviado para o seu celular</string>
    <string name="text_label_to_operation_type">Tipo da Operação</string>
    <string name="text_label_to_source_account">Conta de Origem</string>
    <string name="text_label_to_destination_account">Conta de Destino</string>
    <string name="text_label_to_amount">Valor</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_login">Logar</string>
    <string name="btn_next">Próximo</string>
    <string name="permissions_alert">A permissão deve ser concedida para que o app funcione</string>
    <string name="create_user_error_alert">Erro ao cadastrar usuário</string>
    <string name="service_error_alert">Caro cliente, no momento não foi possível atualizar as informações. Tente Novamente em instantes</string>
    <string name="coin_hint">Escolha uma moeda </string>
    <string name="success_on_transaction"> Operação realizada com sucesso</string>
    <string name="success_on_registration"> Cadastro realizado com sucesso </string>
    <string name="fill_fields"> Preencha todos os campos </string>
    <string name="recovery_password_description"> Digite o código enviado para seu celular para recuperar sua senha </string>
    <string name="recovery_password_message"> Utilize este código para recuperar a sua senha </string>
    <string name="recovery_password_error_message"> Usuário não cadastrado no sistema </string>
    <string name="recovery_password_success_message"> Senha alterada com sucesso </string>
    <string name="recovery_password_error_on_change_pass"> Ocorreu um erro ao alterar a senha, verifique a nova senha atende os requisitos exigidos </string>
    <string name="recovery_password_ask_phone_number"> Digite o número de telefone cadastrado </string>
    <string name="recovery_password_ask_new_pass"> Digite a nova senha </string>
    <string name="edit_profile_success_message"> Alterações salvas com sucesso </string>
    <string name="edit_profile_error_message"> Erro ao salvar as alterações do usuário </string>
    <string name="send_code_message"> Uma mensagem está sendo enviada para o número informado. Isso pode levar alguns instantes.</string>
    <string name="recovery_password_send_code_error"> Usuário não cadastrado no sistema</string>
    <string name="recovery_password_incorrect_code"> Código Inválido</string>
    <string name="no_transaction"> Não existem transações realizadas</string>
    <string name="edit"> Editar </string>
    <string name="exit"> Sair </string>
    <string name="save"> Salvar </string>
    <string name="loading"> Carregando </string>
    <string name="back"> Voltar </string>

    <!--Screen title -->
    <string name="main_screen">Resumo das contas </string>
    <string name="extract_screen">Extrato das transações</string>
    <string name="recovery_password_screen">Esqueci a senha</string>
    <string name="profile_screen">Perfil</string>
    <string name="transaction_screen">Nova Transação</string>

    <string-array name="transactiontypes">
        <item>VENDA</item>
        <item>COMPRA</item>
        <item>TROCA</item>
    </string-array>

    <string-array name="coins">
        <item>BRITA</item>
        <item>BITCOIN</item>
    </string-array>

</resources>
