<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recoverypassw.RecoveryPasswordActivity">

    <RelativeLayout
        android:id="@+id/header_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@color/colorAccent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_phone_android" />
    </RelativeLayout>

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_relative_layout">

        <TextView
            android:id="@+id/recovery_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/recovery_password_description"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/recovery_password_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/recovery_password_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/recovery_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:visibility="gone"
            android:layout_margin="10dp"/>


    </LinearLayout>
    <Button
        android:id="@+id/recovery_password_btn_go_to_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toTopOf="parent"
        android:textColor="@color/baseColor"
        android:text="@string/btn_next"/>

    <Button
        android:id="@+id/recovery_password_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toTopOf="parent"
        android:textColor="@color/baseColor"
        android:visibility="gone"
        android:text="@string/btn_next"/>
    <Button
        android:id="@+id/recovery_password_btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        android:textColor="@color/baseColor"
        style="@style/Widget.AppCompat.Button.Colored"
        android:visibility="gone"
        android:text="@string/btn_confirm"/>
</android.support.constraint.ConstraintLayout>